--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,3 @@
-registry=https://npm.pkg.github.com/bobnetnetwork
+//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
+@bobnetnetwork:registry=https://npm.pkg.github.com
+always-auth=true
