--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-//npm.pkg.github.com/:_authToken=${secrets.GITHUB}
+//npm.pkg.github.com/:_authToken=${{secrets.GITHUB}}
 @bobnetnetwork:registry=https://npm.pkg.github.com
 always-auth=true
