--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-//npm.pkg.github.com/:_authToken=${secrets.GITHUB}
-@bobnetnetwork:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
+@bobnetnetwork:registry=https://npm.pkg.github.com/bobnetnetwork
 always-auth=true
