--- a/.github/workflows/npm_package_publich.yml
+++ b/.github/workflows/npm_package_publich.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-          registry-url: 'https://npm.pkg.github.com/bobnetnetwork'
+          registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
           scope: '@bobnetnetwork'
       - run: npm install
