--- a/.github/workflows/npm_package_publich.yml
+++ b/.github/workflows/npm_package_publich.yml
@@ -17,6 +17,8 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
           scope: '@bobnetnetwork'
+      - name: Authenticate with GitHub package registry
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB }}" > ~/.npmrc
       - run: npm install
       - run: npm publish
         env:
