--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
     "test": ""
   },
   "private": false,
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "dependencies": {
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.3"
+  }
 }
