--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@bobnetnetwork/cms-model",
-  "version": "0.0.6",
+  "version": "0.0.11",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": ""
+    "test": "",
+    "build": "tsc"
   },
   "private": false,
   "publishConfig": {
@@ -10,7 +13,9 @@
   },
   "dependencies": {
     "rxjs": "^6.6.3",
-    "tslib": "^2.0.1",
+    "tslib": "^2.0.1"
+  },
+  "devDependencies": {
     "typescript": "^4.0.3"
   }
 }
